# seaside-installer

./: Cargo.toml  LICENSE.txt  README.md
src/: cmd_args.rs  common.rs  consts.rs  get_config.rs  install.rs  linux.rs  logging.rs  main.rs  uninstall.rs  user.rs  windows.rs
src/common/: install.rs  mod.rs  uninstall.rs
src/linux/: install.rs  mod.rs  uninstall.rs
src/windows/: install.rs  mod.rs  path.rs  uninstall.rs
