[package]
name = "seaside-installer"
version = "0.1.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/RosieTheGhostie/seaside-installer"
license = "MIT"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
directories = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
semver = "1.0.26"
windows-registry = "0.5.3"

[dependencies.minimal-logging]
version = "0.5.0"
git = "https://github.com/RosieTheGhostie/minimal-logging.git"
