[package]
name = "seaside-installer"
version = "0.1.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/RosieTheGhostie/seaside-installer"
license = "MIT"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
directories = "6.0.0"
regex = "1.11.1"
semver = "1.0.26"
ureq = "3.0.12"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.5.3"

# [dependencies.minimal-logging]
# version = "0.5.0"
# git = "https://github.com/RosieTheGhostie/minimal-logging.git"
