[package]
name = "seaside-installer"
version = "0.1.1"
edition = "2024"
readme = "README.md"
repository = "https://github.com/RosieTheGhostie/seaside-installer"
license = "MIT"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
semver = "1.0.26"
ureq = "3.0.12"

[target.'cfg(unix)'.dependencies]
once_cell = "1.21.3"

[target.'cfg(windows)'.dependencies]
directories = "6.0.0"
windows-registry = "0.5.3"
